@@ -64,7 +64,7 @@ Basic Usage
     
     gd = gdelt.gdelt(version=2)
     
-    results = gd.Search(['2016 10 19','2016 10 22'],table='events',coverage=True)
+    results = gd.Search(['2016 10 19','2016 10 22'],table='events',coverage=True,translation=False)
 
     
 
